--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <title>My Web Development Course</title>
 </head>
 <body>
-    <img src="website-banner1.jpg" alt="banner" />
+    <img src="web-banner1.jpg" alt="banner" />
 </body>
 </html>
